# ModelViewer

./: .gitignore  CMakeLists.txt  main.cpp
extra/Shaders/Fragment/: test2.glsl
extra/Shaders/Vertex/: color-map.glsl  test.glsl
src/: ModelViewer.h  main.cpp
src/Actors/: Actor.cpp  Actor.h  Camera.cpp  Camera.h  TestActor.cpp  TestActor.h
src/Components/: MeshComponent.cpp  MeshComponent.h
src/Shaders/Fragment/: base.glsl  test.glsl
src/Shaders/Vertex/: base.glsl  color-map.glsl  test.glsl
src/Tools/Math/: Math.cpp  Math.h  Matrix3.h  Matrix4.h  Vector3.h  Vector4.h
src/Tools/Mesh/: ObjImporter.cpp  ObjImporter.h
src/Tools/Misc/: Debug.cpp  Debug.h  FrameRate.cpp  FrameRate.h
src/Tools/OpenGl/: OpenGl.cpp  OpenGl.h
src/Tools/Shaders/: ShaderBuilder.cpp  ShaderBuilder.h
